--- a/feature-libs/asm/components/asm-customer-360/sections/asm-customer-overview/asm-customer-overview.component.html
+++ b/feature-libs/asm/components/asm-customer-360/sections/asm-customer-overview/asm-customer-overview.component.html
@@ -8,7 +8,7 @@
       <a
         tabindex="0"
         [attr.aria-label]="
-          'asm.customer360.overview.activeCartCode'
+          'asm.customer360.aria.activeCartCode'
             | cxTranslate: { code: activeCart.code }
         "
         role="link"
