--- a/feature-libs/asm/components/asm-customer-360/sections/asm-customer-product-reviews/asm-customer-product-reviews.component.html
+++ b/feature-libs/asm/components/asm-customer-360/sections/asm-customer-product-reviews/asm-customer-product-reviews.component.html
@@ -5,4 +5,5 @@
   [columns]="reviewColumns"
   [entries]="reviewEntries"
   [pageSize]="(context.config$ | async)?.pageSize"
+  (selectItem)="navigateTo($event)"
 ></cx-asm-customer-table>
