--- a/feature-libs/asm/styles/components/_index.scss
+++ b/feature-libs/asm/styles/components/_index.scss
@@ -1,4 +1,5 @@
-@import '~@spartacus/styles/scss/core';
+@import '@spartacus/styles/scss/core';
+
 @import './_asm-bind-cart-dialog.component.scss';
 @import './_asm-main-ui.component.scss';
 @import './_asm-session-timer.component.scss';
